Also run on JDK 11 Signed-off-by:Phillip Kruger <phillip.kruger@gmail.com>